--- a/datasci_7_geospatial.ipynb
+++ b/datasci_7_geospatial.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMb86opayvwNrBSnw3eG3ci",
+      "authorship_tag": "ABX9TyObsdCv9iBbKdJyE9pOIdMb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4095,7 +4095,7 @@
         "\n",
         "The map above visualizes the \"Asthma\" column, which provides details on hospital asthma rates, organized by zip code.\n",
         "\n",
-        "According to the map legend, the color scale ranges from purple to yellow, where purple signifies a lower discharge rate, and yellow signifies a higher discharge rate. Zipcode 60020 exhibits the highest discharge rate, recording a value of 13394.28, while zipcode 60089 displays the lowest discharge rate, with a value of 7512.07."
+        "According to the map legend, the color scale ranges from purple to yellow, where purple signifies a lower asthma rate, and yellow signifies a higher asthma rate. The Zion area exhibits the highest asthma rate, while Deerfield displays the lowest asthma rate."
       ],
       "metadata": {
         "id": "Bo1xdWQoFsUt"
